[gd_scene load_steps=2 format=3 uid="uid://byrsuodb2p8bl"]

[ext_resource type="Script" path="res://deckbuilder/DeckPickContainer.gd" id="1_8np5n"]

[node name="DeckPickContainer" type="HBoxContainer"]
script = ExtResource("1_8np5n")

[node name="DeckNameContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
mouse_filter = 1

[node name="DeckNameButton" type="Button" parent="DeckNameContainer"]
layout_mode = 2
text = "DeckName"

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="EditButton" type="Button" parent="."]
custom_minimum_size = Vector2(70, 30)
layout_mode = 2
text = "Edit"

[node name="MarginContainer2" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(5, 0)
layout_mode = 2

[node name="RemoveButton" type="Button" parent="."]
custom_minimum_size = Vector2(70, 30)
layout_mode = 2
text = "Remove"

[connection signal="pressed" from="DeckNameContainer/DeckNameButton" to="." method="_on_deck_name_button_pressed"]
[connection signal="pressed" from="EditButton" to="." method="_on_edit_button_pressed"]
[connection signal="pressed" from="RemoveButton" to="." method="_on_remove_button_pressed"]
